--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -8,7 +8,22 @@
 "OK" = "OK";
 "Cancel" = "Cancel";
 "Close" = "Close";
+"Error" = "Error";
 "Bookmarks" = "Bookmarks";
 "Nighttime" = "Nighttime";
 "No Image" = "No Image";
 "Keyword or Url" = "Keyword or Url";
+"Add Favorite Success" = "Add Favorite Success";
+"Update Favorite Success" = "Update Favorite Success";
+"Favorites" = "Favorites";
+"History" = "History";
+"Has Been Favorited" = "You Has Been Favorited";
+"Clear History" = "Clear";
+"Clear All History" = "Clear All History";
+"Clear History Success" = "Clear History Success";
+"Add Favorite" = "Add Favorite";
+"Update Favorite" = "Update Favorite";
+"Editing isn't Saved" = "Editing isn't Saved";
+"Title" = "Title";
+"Url Address" = "Url Address";
+"Is Empty" = "Is Empty";
