--- a/MyBrowser/zh-Hans.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hans.lproj/Localizable.strings
@@ -8,7 +8,22 @@
 "OK" = "确定";
 "Cancel" = "取消";
 "Close" = "关闭";
-"Bookmarks" = "书签管理";
+"Error" = "错误";
+"Bookmarks" = "收藏管理";
 "Nighttime" = "夜间模式";
 "No Image" = "无图模式";
-"KeyWord or Url" = "搜索或输入地址";
+"Keyword or Url" = "搜索或输入地址";
+"Add Favorite Success" = "添加收藏成功";
+"Update Favorite Success" = "更新收藏成功";
+"Favorites" = "收藏";
+"History" = "历史";
+"Has Been Favorited" = "你已经收藏过了";
+"Clear History" = "清除";
+"Clear All History" = "清除痕迹";
+"Clear History Success" = "清除历史成功";
+"Add Favorite" = "添加收藏";
+"Update Favorite" = "修改收藏";
+"Editing isn't Saved" = "修改没有保存";
+"Title" = "标题";
+"Url Address" = "网址";
+"Is Empty" = "为空";
