--- a/MyBrowser/en.lproj/LaunchScreen.strings
+++ b/MyBrowser/en.lproj/LaunchScreen.strings
@@ -3,4 +3,4 @@
 "8ie-xW-0ye.text" = "  Copyright (c) 2015年 rootls. All rights reserved.";
 
 /* Class = "UILabel"; text = "我的浏览器"; ObjectID = "kId-c2-rCX"; */
-"kId-c2-rCX.text" = "My Browser";
+"kId-c2-rCX.text" = "我的浏览器";
