--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "Clear History" = "Clear";
 "Clear All History" = "Clear All History";
 "Successfully cleared Footprint" = "Successfully cleared Footprint";
+"Successfully Set NoImage Mode" = "Successfully Set NoImage Mode";
 "Clear History Success" = "Clear History Success";
 "Add Favorite" = "Add Favorite";
 "Update Favorite" = "Update Favorite";
