--- a/MyBrowser/zh-Hans.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hans.lproj/Localizable.strings
@@ -24,6 +24,7 @@
 "Clear All History" = "清除痕迹";
 "Clear History Success" = "清除历史成功";
 "Successfully cleared Footprint" = "已成功清除痕迹";
+"Successfully Set NoImage Mode" = "成功设置无图模式";
 "Add Favorite" = "添加收藏";
 "Update Favorite" = "修改收藏";
 "Editing isn't Saved" = "修改没有保存";
