--- a/MyBrowser/zh-Hans.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hans.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "Close" = "关闭";
 "Error" = "错误";
 "Open" = "打开";
+"Close All" = "全部关闭";
 "Bookmarks" = "收藏管理";
 "Nighttime" = "夜间模式";
 "Daytime" = "日间模式";
