注释清除痕迹及修改HomeURL...

--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -5,6 +5,9 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
+"HomeURL" = "http://google.com";
+
+
 "My Browser" = "Thanks For You Support For My Browser\n http://luowei.github.com";
 "OK" = "OK";
 "Cancel" = "Cancel";
@@ -24,7 +27,7 @@
 "History" = "History";
 "Has Been Favorited" = "You Has Been Favorited";
 "Clear History" = "Clear";
-"Clear All History" = "Clear All History";
+"Clear All History" = "Clear All";
 "Successfully cleared Footprint" = "Successfully cleared Footprint";
 "Successfully Set NoImage Mode" = "Successfully Set NoImage Mode";
 "Clear History Success" = "Clear History Success";
