--- a/MyBrowser/Base.lproj/Localizable.strings
+++ b/MyBrowser/Base.lproj/Localizable.strings
@@ -5,6 +5,8 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
+"HomeURL" = "http://google.com";
+
 "My Browser" = "谢谢支持我的浏览器\n http://luowei.github.com";
 "OK" = "确定";
 "Cancel" = "取消";
