--- a/MyBrowser/de.lproj/Localizable.strings
+++ b/MyBrowser/de.lproj/Localizable.strings
@@ -5,6 +5,8 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
+"HomeURL" = "http://google.com";
+
 "My Browser" = "Danke für deine Unterstützung für meinen Browser\n http://luowei.github.com";
 "OK" = "OK";
 "Cancel" = "stornieren";
@@ -24,7 +26,7 @@
 "History" = "Geschichte";
 "Has Been Favorited" = "Euch ist Favorisiert";
 "Clear History" = "klar";
-"Clear All History" = "Clear All History";
+"Clear All History" = "Alles Löschen";
 "Clear History Success" = "Clear History Success";
 "Successfully cleared Footprint" = "Erfolgreich gelöscht Fußabdruck";
 "Successfully Set NoImage Mode" = "Erfolgreich gesetzt NoImage Modus";
