--- a/MyBrowser/es-MX.lproj/Localizable.strings
+++ b/MyBrowser/es-MX.lproj/Localizable.strings
@@ -5,6 +5,8 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
+"HomeURL" = "http://google.com";
+
 "My Browser" = "¡Gracias apoyar mi navegador\n http://luowei.github.com";
 "OK" = "OK";
 "Cancel" = "cancelar";
@@ -13,9 +15,9 @@
 "Open" = "abierto";
 "Close All" = "Abierto todo";
 "Bookmarks" = "marcadores";
-"Nighttime" = "modo nocturno";
-"Daytime" = "modo Día";
-"No Image" = "modo de texto";
+"Nighttime" = "nocturno";
+"Daytime" = "Día";
+"No Image" = "de texto";
 "About Me" = "acerca de";
 "Keyword or Url" = "Palabra clave o URL";
 "Add Favorite Success" = "Añadir con marcador";
@@ -24,17 +26,17 @@
 "History" = "historia";
 "Has Been Favorited" = "Has sido una colección de";
 "Clear History" = "quitar";
-"Clear All History" = "Borrar todo el historial";
+"Clear All History" = "Borrar todo";
 "Clear History Success" = "Borrar historial de éxito";
-"Successfully cleared Footprint" = "Con éxito despejado Huella;
+"Successfully cleared Footprint" = "Con éxito despejado Huella";
 "Successfully Set NoImage Mode" = "Establecer con éxito el modo NoImage";
 "Add Favorite" = "Añadir favorito";
-"Update Favorite" = "Modificar Favoritos;
+"Update Favorite" = "Modificar Favoritos";
 "Editing isn't Saved" = "Edición no se guarda";
 "Title" = "título";
 "Url Address" = "Url Dirección";
 "Is Empty" = "esta vacio";
-"Scan RQ Code" = "Scan Código RQ;
+"Scan RQ Code" = "Scan Código RQ";
 "Url Saved,Open Now ?" = "Url Guardado en cartón, Abierto ahora?";
 "Not Url Saved in Pasteboard" = "No Url, Guardado en cartón";
 "RQ Code" = "código QR";
