--- a/MyBrowser/pt.lproj/Localizable.strings
+++ b/MyBrowser/pt.lproj/Localizable.strings
@@ -5,37 +5,39 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
-"My Browser" = "谢谢支持我的浏览器\n http://luowei.github.com";
-"OK" = "确定";
-"Cancel" = "取消";
-"Close" = "关闭";
-"Error" = "错误";
-"Open" = "打开";
-"Close All" = "全部关闭";
-"Bookmarks" = "收藏管理";
-"Nighttime" = "夜间模式";
-"Daytime" = "日间模式";
-"No Image" = "无图模式";
-"About Me" = "关于";
-"Keyword or Url" = "搜索或输入地址";
-"Add Favorite Success" = "添加收藏成功";
-"Update Favorite Success" = "更新收藏成功";
-"Favorites" = "收藏";
-"History" = "历史";
-"Has Been Favorited" = "你已经收藏过了";
-"Clear History" = "清除";
-"Clear All History" = "清除痕迹";
-"Clear History Success" = "清除历史成功";
-"Successfully cleared Footprint" = "已成功清除痕迹";
-"Successfully Set NoImage Mode" = "成功设置无图模式";
-"Add Favorite" = "添加收藏";
-"Update Favorite" = "修改收藏";
-"Editing isn't Saved" = "修改没有保存";
-"Title" = "标题";
-"Url Address" = "网址";
-"Is Empty" = "为空";
-"Scan RQ Code" = "扫描二维码";
-"Url Saved,Open Now ?" = "已保存到剪粘板,是否立即打开?";
-"Not Url Saved in Pasteboard" = "非Url,已保存到剪粘板";
-"RQ Code" = "二维码";
-"ReScan" = "重新扫码";
+"HomeURL" = "http://google.com";
+
+"My Browser" = "Graças você o apoio para meu navegador\n http://luowei.github.com";
+"OK" = "OK";
+"Cancel" = "cancelar";
+"Close" = "fechar";
+"Error" = "erro";
+"Open" = "aberto";
+"Close All" = "Feche Tudo";
+"Bookmarks" = "Bookmarks";
+"Nighttime" = "noite";
+"Daytime" = "dia";
+"No Image" = "Sem Imagem";
+"About Me" = "Sobre Mim";
+"Keyword or Url" = "Palavra-chave ou URL";
+"Add Favorite Success" = "Adicionar Sucesso Favorita";
+"Update Favorite Success" = "Atualização Sucesso Favorita";
+"Favorites" = "favoritos";
+"History" = "história";
+"Has Been Favorited" = "Você foi favorito";
+"Clear History" = "claro";
+"Clear All History" = "Limpar Tudo";
+"Clear History Success" = "Limpar Histórico de Sucesso";
+"Successfully cleared Footprint" = "Apuradas com sucesso Footprint";
+"Successfully Set NoImage Mode" = "Definir com sucesso Modo noimage";
+"Add Favorite" = "Adicionar favorito";
+"Update Favorite" = "atualização favorita";
+"Editing isn't Saved" = "Edição não é salvo";
+"Title" = "título";
+"Url Address" = "Url Endereço";
+"Is Empty" = "está Vazio";
+"Scan RQ Code" = "Digitalização Código RQ";
+"Url Saved,Open Now ?" = "Url Salvo em papelão, Open Now?";
+"Not Url Saved in Pasteboard" = "Não Url, salvo no papelão到剪粘板";
+"RQ Code" = "Código RQ";
+"ReScan" = "ReScan";
