--- a/MyBrowser/de.lproj/Localizable.strings
+++ b/MyBrowser/de.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "Nicht Url, in Pappe Gespeichert";
 "RQ Code" = "RQ-Code";
 "ReScan" = "ReScan";
+"Unable Open Web Page With NetWork Disconnected" = "Nicht öffnen Sie die Seite, überprüfen Sie die Netzwerkeinstellungen";
