--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -42,3 +42,4 @@
 "Not Url Saved in Pasteboard" = "Not Url,Saved in Pasteboard";
 "RQ Code" = "RQ Code";
 "ReScan" = "Rescan";
+"Unable Open Web Page With NetWork Disconnected" = "Cann't open the page, check the network settings";
