--- a/MyBrowser/fr.lproj/Localizable.strings
+++ b/MyBrowser/fr.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "Non Url, Saved en carton";
 "RQ Code" = "code de RQ";
 "ReScan" = "ReScan";
+"Unable Open Web Page With NetWork Disconnected" = "Pas ouvrir la page, vérifier les paramètres réseau";
