--- a/MyBrowser/ko.lproj/Localizable.strings
+++ b/MyBrowser/ko.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "URL, 판지에 저장되지";
 "RQ Code" = "RQ 코드";
 "ReScan" = "다시 검색";
+"Unable Open Web Page With NetWork Disconnected" = "아니 네트워크 설정을 확인, 페이지를 열";
