--- a/MyBrowser/ru.lproj/Localizable.strings
+++ b/MyBrowser/ru.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "Не URL, Сохранено в картонные";
 "RQ Code" = "RQ код";
 "ReScan" = "ReScan";
+"Unable Open Web Page With NetWork Disconnected" = "Не открыть страницу, проверьте настройки сети";
