--- a/MyBrowser/zh-Hant.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hant.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "非Url,已保存到剪粘板";
 "RQ Code" = "二維碼";
 "ReScan" = "重新掃碼";
+"Unable Open Web Page With NetWork Disconnected" = "無法打開網頁,請檢查網絡設置";
