--- a/MyBrowser/ar.lproj/Localizable.strings
+++ b/MyBrowser/ar.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "لا رابط، المحفوظة في كرتون";
 "RQ Code" = "RQ مدونة";
 "ReScan" = "إعادة تفحص";
+"Unable Open Web Page With NetWork Disconnected" = "يتم فتح الصفحة، تحقق من إعدادات الشبكة";
