--- a/MyBrowser/es.lproj/Localizable.strings
+++ b/MyBrowser/es.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "No Url, Guardado en cartón";
 "RQ Code" = "código QR";
 "ReScan" = "Reescanear";
+"Unable Open Web Page With NetWork Disconnected" = "No abra la página, compruebe la configuración de red";
