--- a/MyBrowser/pt.lproj/Localizable.strings
+++ b/MyBrowser/pt.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "Não Url, salvo no papelão到剪粘板";
 "RQ Code" = "Código RQ";
 "ReScan" = "ReScan";
+"Unable Open Web Page With NetWork Disconnected" = "Não abrir a página, verifique as configurações de rede";
