--- a/MyBrowser/zh-Hans.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hans.lproj/Localizable.strings
@@ -41,3 +41,4 @@
 "Not Url Saved in Pasteboard" = "非Url,已保存到剪粘板";
 "RQ Code" = "二维码";
 "ReScan" = "重新扫码";
+"Unable Open Web Page With NetWork Disconnected" = "无法打开网页,请检查网络设置";
