修改首页跳转；注释ipad页面内新窗口问题；

--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
 "HomeURL" = "http://google.com";
+"SearchURL" = "https://www.google.com/search?q=%@";
 
 
 "My Browser" = "Thanks For You Support For My Browser\n http://luowei.github.com";
