--- a/MyBrowser/ar.lproj/Localizable.strings
+++ b/MyBrowser/ar.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
 "HomeURL" = "http://google.com";
+"SearchURL" = "https://www.google.com/search?q=%@";
 
 "My Browser" = "شكرا لك الدعم لمتصفحي\n http://luowei.github.com";
 "OK" = "حسنا";
