--- a/MyBrowser/ko.lproj/Localizable.strings
+++ b/MyBrowser/ko.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
 "HomeURL" = "http://google.com";
+"SearchURL" = "https://www.google.com/search?q=%@";
 
 "My Browser" = "덕분에 사용자는 브라우저에 대한 지원을 위해\n http://luowei.github.com";
 "OK" = "그래";
