--- a/MyBrowser/pt-PT.lproj/Localizable.strings
+++ b/MyBrowser/pt-PT.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
 "HomeURL" = "http://google.com";
+"SearchURL" = "https://www.google.com/search?q=%@";
 
 "My Browser" = "Graças você o apoio para meu navegador\n http://luowei.github.com";
 "OK" = "OK";
