--- a/MyBrowser/zh-Hant.lproj/Localizable.strings
+++ b/MyBrowser/zh-Hant.lproj/Localizable.strings
@@ -6,6 +6,7 @@
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
 "HomeURL" = "http://google.com";
+"SearchURL" = "https://www.google.com/search?q=%@";
 
 "My Browser" = "謝謝支持我的瀏覽器\n http://luowei.github.com";
 "OK" = "確定";
