--- a/MyBrowser/ar.lproj/Localizable.strings
+++ b/MyBrowser/ar.lproj/Localizable.strings
@@ -5,8 +5,8 @@
   Created by luowei on 15/6/26.
   Copyright (c) 2015年 wodedata. All rights reserved.
 */
-"HomeURL" = "http://google.com";
-"SearchURL" = "https://www.google.com/search?q=%@";
+"HomeURL" = "http://mybrowser.wodedata.com";
+"SearchURL" = "http://www.baidu.com/s?wd=%@";
 
 "My Browser" = "شكرا لك الدعم لمتصفحي\n http://luowei.github.com";
 "OK" = "حسنا";
