--- a/MyBrowser/ja.lproj/Localizable.strings
+++ b/MyBrowser/ja.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Close" = "シャットダウン";
 "Error" = "間違いました";
 "Open" = "オンにします";
+"Call" = "ダイアル";
 "Close All" = "すべて閉じます";
 "Bookmarks" = "蔵書管理";
 "Nighttime" = "ナイトモード";
@@ -43,3 +44,4 @@
 "RQ Code" = "QRコード";
 "ReScan" = "再スキャンコード";
 "Unable Open Web Page With NetWork Disconnected" = "ページを開くには、ネットワーク設定を確認していません";
+"HTTPS Certifcate Not Trust" = "サーバーの身元を確認することができません\n ブラウザは、％@の身元を確認することはできません。それでも続行しますか？";
