--- a/MyBrowser/ko.lproj/Localizable.strings
+++ b/MyBrowser/ko.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Close" = "닫기";
 "Error" = "오류";
 "Open" = "열린";
+"Call" = "다이얼";
 "Close All" = "모두 닫기";
 "Bookmarks" = "즐겨 찾기";
 "Nighttime" = "야간 모드";
@@ -43,3 +44,4 @@
 "RQ Code" = "RQ 코드";
 "ReScan" = "다시 검색";
 "Unable Open Web Page With NetWork Disconnected" = "아니 네트워크 설정을 확인, 페이지를 열";
+"HTTPS Certifcate Not Trust" = "서버의 ID를 확인할 수 없습니다\n 브라우저 %@의 신원을 확인할 수 없습니다. 그래도 계속 하시겠습니까?";
