--- a/MyBrowser/ru.lproj/Localizable.strings
+++ b/MyBrowser/ru.lproj/Localizable.strings
@@ -14,6 +14,7 @@
 "Close" = "Закрыть";
 "Error" = "ошибка";
 "Open" = "открыто";
+"Call" = "набор номера";
 "Close All" = "Закрыть Все";
 "Bookmarks" = "закладки";
 "Nighttime" = "Ночное Время";
@@ -43,3 +44,4 @@
 "RQ Code" = "RQ код";
 "ReScan" = "ReScan";
 "Unable Open Web Page With NetWork Disconnected" = "Не открыть страницу, проверьте настройки сети";
+"HTTPS Certifcate Not Trust" = "Невозможно проверить сертификат сервера\n My браузер не в состоянии проверить %@ сертификации. Вы по-прежнему?";
