--- a/MyBrowser/de.lproj/Localizable.strings
+++ b/MyBrowser/de.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "Nighttime" = "Nachtmodus";
 "Daytime" = "Daytime-Modus";
 "No Image" = "NoImage Modus";
+"Ad Block" = "Ad Block";
+"Image Mode" = "Halten Sie Fotos";
+"No AdBlock" = "Reserved ad";
 "About Me" = "Über Mich";
 "Keyword or Url" = "Suchbegriff oder URL";
 "Add Favorite Success" = "Add Favorite Success";
