--- a/MyBrowser/en.lproj/Localizable.strings
+++ b/MyBrowser/en.lproj/Localizable.strings
@@ -21,6 +21,9 @@
 "Nighttime" = "Nighttime";
 "Daytime" = "Daytime";
 "No Image" = "No Image";
+"Ad Block" = "Ad Block";
+"Image Mode" = "Image Mode";
+"No AdBlock" = "No AdBlock";
 "About Me" = "About Me";
 "Keyword or Url" = "Keyword or Url";
 "Add Favorite Success" = "Add Favorite Success";
