--- a/MyBrowser/pt-PT.lproj/Localizable.strings
+++ b/MyBrowser/pt-PT.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "Nighttime" = "noite";
 "Daytime" = "dia";
 "No Image" = "Sem Imagem";
+"Ad Block" = "Ad Block";
+"Image Mode" = "Sem imagem";
+"No AdBlock" = "ad reservados";
 "About Me" = "Sobre Mim";
 "Keyword or Url" = "Palavra-chave ou URL";
 "Add Favorite Success" = "Adicionar Sucesso Favorita";
