--- a/MyBrowser/ru.lproj/Localizable.strings
+++ b/MyBrowser/ru.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "Nighttime" = "Ночное Время";
 "Daytime" = "дневное время";
 "No Image" = "нет Изображения";
+"Ad Block" = "Ad Block";
+"Image Mode" = "Поддерживаю фотографии";
+"No AdBlock" = "защищены объявления";
 "About Me" = "Обо Мне";
 "Keyword or Url" = "Ключевое слово или URL-адрес";
 "Add Favorite Success" = "Добавить в избранное успеха";
