--- a/MyBrowser/ar.lproj/Localizable.strings
+++ b/MyBrowser/ar.lproj/Localizable.strings
@@ -20,6 +20,9 @@
 "Nighttime" = "الليل";
 "Daytime" = "وضح النهار";
 "No Image" = "لا يوجد صورة";
+"Ad Block" = "ادبلوك";
+"Image Mode" = "Image Mode";
+"No AdBlock" = "No Adblock";
 "About Me" = "عني";
 "Keyword or Url" = "الكلمة أو رابط";
 "Add Favorite Success" = "إضافة النجاح المفضلة";
